--- a/FrontEnd/src/app/roomlist/roomlist.component.html
+++ b/FrontEnd/src/app/roomlist/roomlist.component.html
@@ -13,8 +13,25 @@
           <td>{{r.Room}}</td>
           <td>{{r.Type}}</td>
           <td>{{r.Price}}</td>
-          <td *ngIf = "r.Status == 1; else firstTemp"><div style="color:green"> Available </div></td> <!--Else --> <ng-template #firstTemp> <td><div style="color:red"> Unavailable </div></td> </ng-template><td>
-            <button class="btn btn-success" (click)="bookroom" >BOOK</button>
+          <td *ngIf = "r.Status == 1; else firstTemp">
+            <div style="color:green"> Available </div>
+          </td>
+          <!--Else -->
+          <ng-template #firstTemp> <td>
+            <div style="color:red"> Unavailable </div>
+          </td></ng-template><td>
+
+
+            <div *ngIf = "r.Status == 1; else secondTemp">
+              <button class="btn btn-success" (click)="bookroom" >BOOK</button>
+            </div>
+            <!--Else -->
+            <ng-template #secondTemp> <td>
+            <button class="btn btn-danger" (click)="bookroom" >BOOKED</button>
+            </td></ng-template>
+
+
+
           </td>
         </tr>
       </table>
